{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 82,
  "lineage": "ef7d456c-5b7a-3033-1319-ef32a50501df",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "g6_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da34263fcfcac213",
            "arn": "arn:aws:ec2:us-east-1:642416392280:elastic-ip/eipalloc-0da34263fcfcac213",
            "domain": "vpc",
            "id": "eipalloc-0da34263fcfcac213",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-13-219-176-252.compute-1.amazonaws.com",
            "public_ip": "13.219.176.252",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "g6_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e001c9271cf7f3b9",
            "arn": "arn:aws:ec2:us-east-1:642416392280:instance/i-0082a29b214cf4455",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0082a29b214cf4455",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-publica-g6",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01c2adb740350f6aa",
            "private_dns": "ip-10-6-1-131.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.6.1.131",
            "public_ip": "52.23.182.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b5f29a63607ed12e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5271d6fa13dd226",
            "tags": {
              "Name": "g6-ec2"
            },
            "tags_all": {
              "Name": "g6-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0865a45255933d0cf"
            ]
          },
          "dependencies": [
            "aws_security_group.g6_sg_ec2",
            "aws_subnet.g6_subnet_publica",
            "aws_vpc.g6_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "g6_ec2_privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e001c9271cf7f3b9",
            "arn": "arn:aws:ec2:us-east-1:642416392280:instance/i-0ae5167ebd7872e85",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ae5167ebd7872e85",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "key-privada-g6",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f607ec10456fd8fc",
            "private_dns": "ip-10-6-2-241.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.6.2.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a26600c2a76d705e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b26cfc5b5fef4a99",
            "tags": {
              "Name": "g6-ec2-privada"
            },
            "tags_all": {
              "Name": "g6-ec2-privada"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0865a45255933d0cf"
            ]
          },
          "dependencies": [
            "aws_security_group.g6_sg_ec2",
            "aws_subnet.g6_subnet_privada",
            "aws_vpc.g6_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "g6_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:642416392280:internet-gateway/igw-057b658422232f9fa",
            "id": "igw-057b658422232f9fa",
            "owner_id": "642416392280",
            "tags": {
              "Name": "g6-igw"
            },
            "tags_all": {
              "Name": "g6-igw"
            },
            "vpc_id": "vpc-00259a767b9638326"
          },
          "dependencies": [
            "aws_vpc.g6_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "g6_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da34263fcfcac213",
            "association_id": "eipassoc-08502bd2bf4e0d6cd",
            "connectivity_type": "public",
            "id": "nat-0b0ba8d60cc0972c4",
            "network_interface_id": "eni-0fb1ae6c5d3f9c89c",
            "private_ip": "10.6.1.13",
            "public_ip": "13.219.176.252",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b5271d6fa13dd226",
            "tags": {
              "Name": "g6-nat-gateway"
            },
            "tags_all": {
              "Name": "g6-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.g6_eip",
            "aws_subnet.g6_subnet_publica",
            "aws_vpc.g6_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "g6_private_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:642416392280:route-table/rtb-0d83fd764104cee52",
            "id": "rtb-0d83fd764104cee52",
            "owner_id": "642416392280",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b0ba8d60cc0972c4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "g6-private-rtb"
            },
            "tags_all": {
              "Name": "g6-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-00259a767b9638326"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.g6_eip",
            "aws_nat_gateway.g6_nat",
            "aws_subnet.g6_subnet_publica",
            "aws_vpc.g6_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "g6_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:642416392280:route-table/rtb-0ecaf5c941d4158cd",
            "id": "rtb-0ecaf5c941d4158cd",
            "owner_id": "642416392280",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-057b658422232f9fa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "g6-rtb"
            },
            "tags_all": {
              "Name": "g6-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-00259a767b9638326"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.g6_igw",
            "aws_vpc.g6_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "g6_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0081f04be877a12",
            "route_table_id": "rtb-0ecaf5c941d4158cd",
            "subnet_id": "subnet-0b5271d6fa13dd226"
          },
          "dependencies": [
            "aws_internet_gateway.g6_igw",
            "aws_route_table.g6_route_table",
            "aws_subnet.g6_subnet_publica",
            "aws_vpc.g6_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "g6_private_rtb_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb3aafcb0f75b0c1",
            "route_table_id": "rtb-0d83fd764104cee52",
            "subnet_id": "subnet-0b26cfc5b5fef4a99"
          },
          "dependencies": [
            "aws_eip.g6_eip",
            "aws_nat_gateway.g6_nat",
            "aws_route_table.g6_private_rtb",
            "aws_subnet.g6_subnet_privada",
            "aws_subnet.g6_subnet_publica",
            "aws_vpc.g6_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "g6_sg_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:642416392280:security-group/sg-0865a45255933d0cf",
            "description": "Acesso SSH e HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0865a45255933d0cf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "g6-sg-ec2",
            "name_prefix": "",
            "owner_id": "642416392280",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00259a767b9638326"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.g6_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "g6_subnet_privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:642416392280:subnet/subnet-0b26cfc5b5fef4a99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.6.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b26cfc5b5fef4a99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "642416392280",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "g6-subnet-privada"
            },
            "tags_all": {
              "Name": "g6-subnet-privada"
            },
            "vpc_id": "vpc-00259a767b9638326"
          },
          "dependencies": [
            "aws_vpc.g6_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "g6_subnet_publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:642416392280:subnet/subnet-0b5271d6fa13dd226",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.6.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5271d6fa13dd226",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "642416392280",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "g6-subnet-publica"
            },
            "tags_all": {
              "Name": "g6-subnet-publica"
            },
            "vpc_id": "vpc-00259a767b9638326"
          },
          "dependencies": [
            "aws_vpc.g6_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "g6_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:642416392280:vpc/vpc-00259a767b9638326",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.6.0.0/16",
            "default_network_acl_id": "acl-0870b8afcf283a520",
            "default_route_table_id": "rtb-073563252336e3d7f",
            "default_security_group_id": "sg-0b43ea39e19e6e154",
            "dhcp_options_id": "dopt-0e5e15694d091ecd1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00259a767b9638326",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-073563252336e3d7f",
            "owner_id": "642416392280",
            "tags": {
              "Name": "g6-vpc"
            },
            "tags_all": {
              "Name": "g6-vpc"
            }
          }
        }
      ]
    }
  ]
}